--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>the directors' alphabet</title>
+    <title>L'alphabet des réalisateurs</title>
     <link rel="stylesheet" href="/css/reset.css">
     <link rel="stylesheet" href="/css/master.css">
   </head>
 
     <section id="container">
-      <h1>The directors</h1>
+      <h1>Les realisateurs</h1>
     <a href="#" data-filter="consonants" tabindex="-1">Les consones</a>
     <a href="#" data-filter="vowels" tabindex="-1">Les voyelles</a>
     <a href="#" data-filer="all" tabindex="-1">tout</a>
