--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       </div>
       <div data-filter="vowels">Y <p>Jennifer Yuh Nelson</p>
       </div>
-      <div data-filter="consonants">Z <p>Chloé Zhao</p>
+      <div data-filter="consonants">Z <p>Chloe Zhao</p>
       </div>
     </section>
 
