--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="styles/reset.css">
     <link rel="stylesheet" href="styles/master.css">
   </head>
-
+<div id="progress"></div>
     <section id="container">
       <h1>Les realisateurs</h1>
     <a href="#" data-filter="consonants" tabindex="-1">Les consones</a>
