progress bar supprimé

--- a/index.html
+++ b/index.html
@@ -6,12 +6,11 @@
     <link rel="stylesheet" href="styles/reset.css">
     <link rel="stylesheet" href="styles/master.css">
   </head>
-<div id="progress"></div>
     <section id="container">
-      <h1>Les realisateurs</h1>
-    <a href="#" data-filter="consonants" tabindex="-1">Les consones</a>
-    <a href="#" data-filter="vowels" tabindex="-1">Les voyelles</a>
-    <a href="#" data-filer="all" tabindex="-1">tout</a>
+      <h1>Les réalisateursa</h1>
+    <a href="#" data-filter="consonants" tabindex="-1">Consonnes</a>
+    <a href="#" data-filter="vowels" tabindex="-1">Voyelles</a>
+    <a href="#" data-filer="all" tabindex="-1">Tout</a>
 
       <div data-filter="vowels">A <p>Amma Asante</p>
       </div>
