--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles/master.css">
   </head>
     <section id="container">
-      <h1>Les réalisateursa</h1>
+      <h1>Les realisateurs et realisatrices</h1>
     <a href="#" data-filter="consonants" tabindex="-1">Consonnes</a>
     <a href="#" data-filter="vowels" tabindex="-1">Voyelles</a>
     <a href="#" data-filer="all" tabindex="-1">Tout</a>
