--- a/index.html
+++ b/index.html
@@ -2,67 +2,68 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>L'alphabet des réalisateurs</title>
+    <title>ABC's of directors</title>
     <link rel="stylesheet" href="styles/reset.css">
     <link rel="stylesheet" href="styles/master.css">
   </head>
     <section id="container">
-      <h1>Les realisateurs et realisatrices</h1>
-    <a href="#" data-filter="consonants" tabindex="-1">Consonnes</a>
-    <a href="#" data-filter="vowels" tabindex="-1">Voyelles</a>
-    <a href="#" data-filer="all" tabindex="-1">Tout</a>
+      <h1>ABC's of directors</h1>
+      <!-- <p>26 letters for 26 directors</p> -->
+    <a href="#" data-filter="hommes" tabindex="-1">Men</a>
+    <a href="#" data-filter="femmes" tabindex="-1">Women</a>
+    <a href="#" data-filer="all" tabindex="-1">All</a>
 
-      <div data-filter="vowels">A <p>Amma Asante</p>
+      <div data-filter="femmes">A <p>Amma Asante</p>
       </div>
-      <div data-filter="consonants">B <p>Susanne Bier</p>
+      <div data-filter="femmes">B <p>Susanne Bier</p>
       </div>
-      <div data-filter="consonants">C <p>Niki Caro</p>
+      <div data-filter="femmes">C <p>Niki Caro</p>
       </div>
-      <div data-filter="consonants">D <p>Brian De Palma</p>
+      <div data-filter="hommes">D <p>Brian De Palma</p>
       </div>
-      <div data-filter="vowels">E <p>Blake Edwards</p>
+      <div data-filter="hommes">E <p>Blake Edwards</p>
       </div>
-      <div data-filter="consonants">F <p>Anne Fletcher</p>
+      <div data-filter="femmes">F <p>Anne Fletcher</p>
       </div>
-      <div data-filter="consonants">G <p>Greta Gerwig</p>
+      <div data-filter="femmes">G <p>Greta Gerwig</p>
       </div>
-      <div data-filter="consonants">H <p>Catherine Hardwicke</p>
+      <div data-filter="femmes">H <p>Catherine Hardwicke</p>
       </div>
-      <div data-filter="vowels">I <p>James Ivory</p>
+      <div data-filter="hommes">I <p>James Ivory</p>
       </div>
-      <div data-filter="consonants">J <p>Peter Jackson</p>
+      <div data-filter="hommes">J <p>Peter Jackson</p>
       </div>
-      <div data-filter="consonants">K <p>Jennifer Kent</p>
+      <div data-filter="femmes">K <p>Jennifer Kent</p>
       </div>
-      <div data-filter="consonants">L <p>Ang lee</p>
+      <div data-filter="hommes">L <p>Ang lee</p>
       </div>
-      <div data-filter="consonants">M <p>Sam Mendes</p>
+      <div data-filter="hommes">M <p>Sam Mendes</p>
       </div>
-      <div data-filter="consonants">N <p>Christopher Nolan</p>
+      <div data-filter="hommes">N <p>Christopher Nolan</p>
       </div>
-      <div data-filter="vowels">O <p>Kenny Ortega</p>
+      <div data-filter="hommes">O <p>Kenny Ortega</p>
       </div>
-      <div data-filter="consonants">P <p>Gina Prince-Bythewood</p>
+      <div data-filter="femmes">P <p>Gina Prince-Bythewood</p>
       </div>
-      <div data-filter="consonants">Q <p>Brothers Quay</p>
+      <div data-filter="hommes">Q <p>Brothers Quay</p>
       </div>
-      <div data-filter="consonants">R <p>Dee Rees</p>
+      <div data-filter="femmes">R <p>Dee Rees</p>
       </div>
-      <div data-filter="consonants">S <p>Marjane Satrapi</p>
+      <div data-filter="femmes">S <p>Marjane Satrapi</p>
       </div>
-      <div data-filter="consonants">T <p>Julie Taymor</p>
+      <div data-filter="femmes">T <p>Julie Taymor</p>
       </div>
-      <div data-filter="vowels">U <p>Peter Ustinov</p>
+      <div data-filter="hommes">U <p>Peter Ustinov</p>
       </div>
-      <div data-filter="consonants">V <p>Gore Verbinski</p>
+      <div data-filter="hommes">V <p>Gore Verbinski</p>
       </div>
-      <div data-filter="consonants">W <p>Taika Waititi</p>
+      <div data-filter="hommes">W <p>Taika Waititi</p>
       </div>
-      <div data-filter="consonants">X <p>Henri Xhonneux</p>
+      <div data-filter="hommes">X <p>Henri Xhonneux</p>
       </div>
-      <div data-filter="vowels">Y <p>Jennifer Yuh Nelson</p>
+      <div data-filter="femmes">Y <p>Jennifer Yuh Nelson</p>
       </div>
-      <div data-filter="consonants">Z <p>Chloe Zhao</p>
+      <div data-filter="femmes">Z <p>Chloe Zhao</p>
       </div>
     </section>
 
