--- a/index.html
+++ b/index.html
@@ -12,57 +12,105 @@
     <a href="#" data-filter="femmes" tabindex="-1">Women</a>
     <a href="#" data-filer="all" tabindex="-1">All</a>
 
-      <div data-filter="femmes">A <p>Amma Asante</p>
+      <div data-filter="femmes">A <h4>Amma Asante</h4>
+        <p>Filmography</p>
+        <ul>
+          <li>A way of life, 2004</li>
+          <li>Belle, 2013</li>
+          <li>A united Kingdom, 2016</li>
+          <li>Where Hands Touch, 2018</li>
+        </ul>
       </div>
-      <div data-filter="femmes">B <p>Susanne Bier</p>
+      <div data-filter="femmes">B <h4>Susanne Bier</h4>
+        <p>Filmography</p>
+        <ul>
+          <li>Brothers, 2004</li>
+          <li>Love Is All You Need, 2012</li>
+          <li>A united Kingdom, 2016</li>
+          <li>A second chance, 2014</li>
+        </ul>
       </div>
-      <div data-filter="femmes">C <p>Niki Caro</p>
+      <div data-filter="femmes">C <h4>Niki Caro</h4>
+        <p>Filmography</p>
+        <ul>
+          <li>Whale Rider, 2002</li>
+          <li>A Heavenly Vintage, 2009</li>
+          <li>McFarland, USA, 2015</li>
+          <li>Mulan, 2020</li>
+        </ul>
       </div>
-      <div data-filter="hommes">D <p>Brian De Palma</p>
+      <div data-filter="hommes">D <h4>Brian De Palma</h4>
+        <p>Filmography</p>
+        <ul>
+          <li>Greetings, 1968</li>
+          <li>Mission: Impossible, 1996</li>
+          <li>Femme Fatale, 2002</li>
+          <li>Passion, 2012</li>
+        </ul>
       </div>
-      <div data-filter="hommes">E <p>Blake Edwards</p>
+      <div data-filter="hommes">E <h4>Blake Edwards</h4>
+        <p>Filmography</p>
+        <ul>
+          <li>Blind Date, 1987</li>
+          <li>Skin Deep, 1989</li>
+          <li>Switch, 1991</li>
+          <li>Son of the Pink Panther, 1993</li>
+        </ul>
       </div>
-      <div data-filter="femmes">F <p>Anne Fletcher</p>
+      <div data-filter="femmes">F <h4>Anne Fletcher</h4>
+        <p>Filmography</p>
+        <ul>
+          <li>Step Up, 2006</li>
+          <li>27 dresses, 2008</li>
+          <li>The proposal, 2009</li>
+          <li>Dumplin', 2018</li>
+        </ul>
       </div>
-      <div data-filter="femmes">G <p>Greta Gerwig</p>
+      <div data-filter="femmes">G <h4>Greta Gerwig</h4>
+        <p>Filmography</p>
+        <ul>
+          <li>Nights and Weekends, 2008</li>
+          <li>Lady Bird, 2017</li>
+          <li>Little Women, 2019</li>
+        </ul>
       </div>
-      <div data-filter="femmes">H <p>Catherine Hardwicke</p>
+      <div data-filter="femmes">H <h4>Catherine Hardwicke</h4>
       </div>
-      <div data-filter="hommes">I <p>James Ivory</p>
+      <div data-filter="hommes">I <h4>James Ivory</h4>
       </div>
-      <div data-filter="hommes">J <p>Peter Jackson</p>
+      <div data-filter="hommes">J <h4>Peter Jackson</h4>
       </div>
-      <div data-filter="femmes">K <p>Jennifer Kent</p>
+      <div data-filter="femmes">K <h4>Jennifer Kent</h4>
       </div>
-      <div data-filter="hommes">L <p>Ang lee</p>
+      <div data-filter="hommes">L <h4>Ang lee</h4>
       </div>
-      <div data-filter="hommes">M <p>Sam Mendes</p>
+      <div data-filter="hommes">M <h4>Sam Mendes</h4>
       </div>
-      <div data-filter="hommes">N <p>Christopher Nolan</p>
+      <div data-filter="hommes">N <h4>Christopher Nolan</h4>
       </div>
-      <div data-filter="hommes">O <p>Kenny Ortega</p>
+      <div data-filter="hommes">O <h4>Kenny Ortega</h4>
       </div>
-      <div data-filter="femmes">P <p>Gina Prince-Bythewood</p>
+      <div data-filter="femmes">P <h4>Gina Prince-Bythewood</h4>
       </div>
-      <div data-filter="hommes">Q <p>Brothers Quay</p>
+      <div data-filter="hommes">Q <h4>Brothers Quay</h4>
       </div>
-      <div data-filter="femmes">R <p>Dee Rees</p>
+      <div data-filter="femmes">R <h4>Dee Rees</h4>
       </div>
-      <div data-filter="femmes">S <p>Marjane Satrapi</p>
+      <div data-filter="femmes">S <h4>Marjane Satrapi</h4>
       </div>
-      <div data-filter="femmes">T <p>Julie Taymor</p>
+      <div data-filter="femmes">T <h4>Julie Taymor</h4>
       </div>
-      <div data-filter="hommes">U <p>Peter Ustinov</p>
+      <div data-filter="hommes">U <h4>Peter Ustinov</h4>
       </div>
-      <div data-filter="hommes">V <p>Gore Verbinski</p>
+      <div data-filter="hommes">V <h4>Gore Verbinski</h4>
       </div>
-      <div data-filter="hommes">W <p>Taika Waititi</p>
+      <div data-filter="hommes">W <h4>Taika Waititi</h4>
       </div>
-      <div data-filter="hommes">X <p>Henri Xhonneux</p>
+      <div data-filter="hommes">X <h4>Henri Xhonneux</h4>
       </div>
-      <div data-filter="femmes">Y <p>Jennifer Yuh Nelson</p>
+      <div data-filter="femmes">Y <h4>Jennifer Yuh Nelson</h4>
       </div>
-      <div data-filter="femmes">Z <p>Chloe Zhao</p>
+      <div data-filter="femmes">Z <h4>Chloe Zhao</h4>
       </div>
     </section>
 
