--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
     <p>⌄ Swipe ⌄</p>
   </section>
     <section id="container">
-      <h1>ABC's of directors</h1>
-    <a href="#container data-filter" data-filter="hommes" tabindex="-1">Men</a>
-    <a href="#container data-filter" data-filter="femmes" tabindex="-1">Women</a>
-    <a href="#container" data-filer="all" tabindex="-1">All</a>
+      <h1 id="here">ABC's of directors</h1>
+    <a href="#" data-filter="hommes" tabindex="-1">Men</a>
+    <a href="#" data-filter="femmes" tabindex="-1">Women</a>
+    <a href="#" data-filer="all" tabindex="-1">All</a>
 
       <div data-filter="femmes"><h3>A</h3><h4>Amma Asante</h4>
         <p>Filmography</p>
@@ -66,7 +66,7 @@
           <li>A united Kingdom, 2016</li>
           <li>Where Hands Touch, 2018</li>
         </ul>
-        <a href="#popup1" class="button">More about her</a>
+        <a href="#popup1" class="buttonW">More about her</a>
       </div>
       <div id="popup1" class="backdrop">
 	<div class="popup">
@@ -85,7 +85,17 @@
           <li>A united Kingdom, 2016</li>
           <li>A second chance, 2014</li>
         </ul>
-      </div>
+      <a href="#popup2" class="buttonW">More about her</a>
+    </div>
+    <div id="popup2" class="backdrop">
+<div class="popup">
+  <h4>Susanne Bier</h4>
+  <a class="close" href="#container">&times;</a>
+  <div class="content">
+    <p>Though Academy Award®, Golden Globe Award and Emmy Award winning writer and director Susanne Bier's films often play out against a wide-reaching global backdrop, their focus is intimate, carefully exploring the explosive emotions and complexities of familial bonds. This unique combination is part of the formula that has made her Denmark's leading female filmmaker and a powerhouse worldwide.</p>
+  </div>
+</div>
+</div>
       <div data-filter="femmes"><h3>C</h3><h4>Niki Caro</h4>
         <p>Filmography</p>
         <ul>
@@ -94,7 +104,17 @@
           <li>McFarland, USA, 2015</li>
           <li>Mulan, 2020</li>
         </ul>
-      </div>
+      <a href="#popup3" class="buttonW">More about her</a>
+    </div>
+    <div id="popup3" class="backdrop">
+<div class="popup">
+  <h4>Niki Caro</h4>
+  <a class="close" href="#container">&times;</a>
+  <div class="content">
+    <p>Nikola Jean Caro MNZM (born 20 September 1966) is a New Zealand film director and screenwriter. Her 2002 film Whale Rider was critically praised and won a number of awards at international film festivals. She directed the 2020 live action version of Disney's Mulan, making her the second female and the second New Zealand director hired by Disney to direct a film budgeted at over $100 million.</p>
+  </div>
+</div>
+</div>
       <div data-filter="hommes"><h3>D</h3><h4>Brian De Palma</h4>
         <p>Filmography</p>
         <ul>
@@ -192,7 +212,7 @@
           <li>Interstellar, 2014</li>
         </ul>
       </div>
-      <div data-filter="hommes"><h>O</h><h4>Kenny Ortega</h4>
+      <div data-filter="hommes"><h3>O</h3><h4>Kenny Ortega</h4>
         <p>Filmography</p>
         <ul>
           <li>Hocus Pocus, 1993</li>
@@ -246,7 +266,7 @@
           <li>The Tempest, 2010</li>
         </ul>
       </div>
-      <div data-filter="hommes"><h>U</h><h4>Peter Ustinov</h4>
+      <div data-filter="hommes"><h3>U</h3><h4>Peter Ustinov</h4>
         <p>Filmography</p>
         <ul>
           <li>Billy Budd, 1962</li>
