--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           <li>A united Kingdom, 2016</li>
           <li>Where Hands Touch, 2018</li>
         </ul>
-        <a href="#popup1" class="buttonW">More about her</a>
+        <a href="#popup1" class="button">More about her</a>
       </div>
       <div id="popup1" class="backdrop">
 	<div class="popup">
@@ -85,7 +85,7 @@
           <li>A united Kingdom, 2016</li>
           <li>A second chance, 2014</li>
         </ul>
-      <a href="#popup2" class="buttonW">More about her</a>
+      <a href="#popup2" class="button">More about her</a>
     </div>
     <div id="popup2" class="backdrop">
 <div class="popup">
@@ -104,7 +104,7 @@
           <li>McFarland, USA, 2015</li>
           <li>Mulan, 2020</li>
         </ul>
-      <a href="#popup3" class="buttonW">More about her</a>
+      <a href="#popup3" class="button">More about her</a>
     </div>
     <div id="popup3" class="backdrop">
 <div class="popup">
